# First-hand-Football

./: .gitignore  fbref_state.json  requirements.txt
FBref_scraper/: FBrefScraper.py  README.md  __init__.py
Notebooks/: Understat_xG_Analysis.ipynb
batch_layer/: README.md  pyproject.toml
batch_layer/hdfs/: consumer.py
gemini_plus_minus/: README.md  __init__.py  api_football_compute.py  api_football_realtime.py  compute.py  requirements.txt  stability.py  translate.py
ingestion/: README.md  pyproject.toml
ingestion-layer/: build.sbt
ingestion-layer/src/main/scala/: Football.scala  LiveMatch.scala  Main.scala  Topics.scala
ingestion/collection/: collector.py  normalize.py
ingestion/ingestion/: ingestor.py  run.py
ingestion/publication/: publisher.py
scripts/: test_api.py
serving_layer/: pyproject.toml
speed_layer/: pyproject.toml
speed_layer/stream_process/: processor.py
storage/: file.json
